# ThreadHunter_open

./: README.md  mypy.ini  pyproject.toml  qwen.md  ruff.toml
data/: tags-rules.yaml
idea/: README.md
idea/01-idea/: README.md  inspiration.md  why-now.md
idea/02-vision/: README.md  day-in-the-life.md  success-criteria.md
idea/03-audience/: README.md  jobs-to-be-done.md  segments.md
idea/04-research/: README.md  accelerators-landscape.md  analogs.md  competitors-landscape.md  delta.md  methodologies.md  open-source-landscape.md  saas-landscape.md  social-trends.md  what-to-avoid.md  what-to-steal.md
idea/05-principles/: README.md  action-oriented.md  local-first.md  one-person-company.md  proactive.md
idea/06-architecture/: README.md  agent-loop.md  data-flow.md  integrations.md  memory-model.md  permissions.md  tech-stack.md  triggers.md
idea/07-decisions/: README.md  product-decisions.md  tech-decisions.md  trade-offs.md
idea/08-capabilities/: README.md  analytics.md  strategy.md  (+3 more)
memory/: MEMORY.md  feedback_5_moves_after_feature.md  feedback_build_before_push.md  feedback_commit_named_files.md  feedback_no_env_read.md  feedback_no_hardcode.md  project_overview.md  reference_architecture.md  user_role.md
plans/: 2026-07-01-mvp-parsing-pipeline.md
retrospectives/: 2026-07-01_14-30_faза2-db-config.md  2026-07-02_12-00_фаза4-extraction-pipeline.md  TEMPLATE.md
tests/: conftest.py  test_channels.py  test_cli.py  test_cli_phase3.py  test_config.py  test_db.py  test_e2e.py  test_phase4.py  test_posts.py  test_telegram_auth.py  test_telegram_client.py
(+32 files in other folders)
